# newsletter_test_task

./: .gitignore  Dockerfile  LICENSE  README.md  api.Dockerfile  docker-compose.yml  pyproject.toml
backend/: api.Dockerfile  fake_data.py  main.py
backend/presentation/api/endpoints/: setup.py
backend/src/presentation/api/endpoints/: default.py  healthcheck.py
front/: package-lock.json
src/newsletter/: main.py
src/newsletter/adapters/database/: fake_newsletter_db.py
src/newsletter/application/: get_newsletter.py  get_newsletters.py
src/newsletter/application/common/: exceptions.py  interactor.py  newsletter_gateway.py
src/newsletter/bootstrap/: di.py
src/newsletter/domain/models/: newsletter.py
src/newsletter/presentation/api/endpoints/: newsletter.py  setup.py
