[tool.poetry]
name = "newsletter"
version = "0.0.1"
description = "Test task for Full-stack Software Engineer intern position"
authors = ["Andrii Kulishov <andryxakulishow@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
dishka = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
